--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             }
 
             function startGame() {
-                // Logic for starting game and updating board.
+                // Placeholder for game logic.
             }
 
             setInterval(drawBoard, 100);
